--- a/MovieApp/app/src/main/res/layout/activity_movie_detail.xml
+++ b/MovieApp/app/src/main/res/layout/activity_movie_detail.xml
@@ -7,18 +7,6 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/backButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/red_600"
-        android:clickable="true"
-        android:onClick="onBackPressed"
-        android:scaleX="0.6"
-        android:scaleY="0.6"
-        android:src="@android:drawable/ic_media_previous"
-        android:tint="#FFFFFF" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/shareButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -56,6 +44,7 @@
                 android:layout_width="120dp"
                 android:layout_height="170dp"
                 android:layout_marginStart="16dp"
+                android:translationY="100px"
                 app:cardCornerRadius="4dp"
                 app:layout_constraintBottom_toBottomOf="@+id/backdrop_guideline"
                 app:layout_constraintStart_toStartOf="parent"
@@ -111,7 +100,9 @@
                 android:id="@+id/movie_website"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="136dp"
                 android:layout_marginTop="24dp"
+                android:text="Visit on IMDb"
                 android:textColor="@color/highlightColor"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="@id/movie_poster_card"
@@ -130,16 +121,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginEnd="16dp"
                 android:textAlignment="textStart"
                 android:textColor="?android:attr/textColor"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/movie_poster_title_barrier"
                 tools:textSize="16sp" />
-
-
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
