--- a/MovieApp/app/src/main/res/layout/activity_movie_detail.xml
+++ b/MovieApp/app/src/main/res/layout/activity_movie_detail.xml
@@ -74,6 +74,7 @@
                 android:textColor="@color/red_700"
                 android:textSize="24sp"
                 android:textStyle="bold"
+                android:onClick="showWebsiteOnTitleClick"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/movie_poster_card"
                 app:layout_constraintTop_toBottomOf="@+id/backdrop_guideline" />
