--- a/MovieApp/app/src/main/res/layout/activity_movie_detail.xml
+++ b/MovieApp/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,132 +9,167 @@
         android:id="@+id/shareButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
         android:backgroundTint="@color/red_600"
         android:clickable="true"
         android:src="@android:drawable/ic_menu_share"
         android:tint="#FFFFFF"
-        android:translationX="320dp"
-        android:translationY="650dp" />
+        android:translationX="150dp"
+        android:translationY="300dp"
+        app:layout_constraintBottom_toTopOf="@+id/detailsMenu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/nestedScrollView" />
 
-    <androidx.core.widget.NestedScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/nestedScrollView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:fillViewport="true">
 
-            <ImageView
-                android:id="@+id/movie_backdrop"
-                android:layout_width="468dp"
-                android:layout_height="239dp"
-                app:layout_constraintBottom_toBottomOf="@+id/backdrop_guideline"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.508"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
-                app:srcCompat="@drawable/backdrop" />
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/movie_poster_card"
-                android:layout_width="120dp"
-                android:layout_height="170dp"
-                android:layout_marginStart="16dp"
-                android:translationY="100px"
-                app:cardCornerRadius="4dp"
-                app:layout_constraintBottom_toBottomOf="@+id/backdrop_guideline"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/backdrop_guideline">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/movie_poster"
+                    android:id="@+id/movie_backdrop"
+                    android:layout_width="468dp"
+                    android:layout_height="0dp"
+                    android:layout_marginBottom="3dp"
+                    app:layout_constraintBottom_toTopOf="@+id/backdrop_guideline"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.508"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.0"
+                    app:srcCompat="@drawable/backdrop" />
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/movie_poster_card"
+                    android:layout_width="120dp"
+                    android:layout_height="170dp"
+                    android:layout_marginStart="16dp"
+                    android:translationY="100px"
+                    app:cardCornerRadius="4dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/backdrop_guideline"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/backdrop_guideline">
+
+                    <ImageView
+                        android:id="@+id/movie_poster"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/backdrop_guideline"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintGuide_percent="0.33" />
+
+                <TextView
+                    android:id="@+id/movie_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:onClick="showWebsiteOnTitleClick"
+                    android:textColor="@color/red_700"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/movie_poster_card"
+                    app:layout_constraintTop_toBottomOf="@+id/backdrop_guideline" />
+
+                <TextView
+                    android:id="@+id/movie_release_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#757575"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="@+id/movie_title"
+                    app:layout_constraintTop_toBottomOf="@+id/movie_title" />
+
+                <TextView
+                    android:id="@+id/movie_genre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#757575"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="@id/movie_release_date"
+                    app:layout_constraintTop_toBottomOf="@id/movie_release_date" />
+
+                <TextView
+                    android:id="@+id/movie_website"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="200dp"
+                    android:layout_marginTop="24dp"
+                    android:text="@string/visit"
+                    android:textColor="@color/highlightColor"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="@id/movie_poster_card"
+                    app:layout_constraintTop_toBottomOf="@id/movie_poster_card" />
+
+                <androidx.constraintlayout.widget.Barrier
+                    android:id="@+id/movie_poster_title_barrier"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:barrierDirection="bottom"
+                    app:constraint_referenced_ids="movie_release_date,movie_poster_card,movie_genre,movie_website"
+                    tools:layout_editor_absoluteY="379dp" />
+
+                <TextView
+                    android:id="@+id/movie_overview"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="16dp"
+                    android:textAlignment="textStart"
+                    android:textColor="?android:attr/textColor"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/movie_poster_title_barrier"
+                    tools:textSize="16sp" />
 
-            </androidx.cardview.widget.CardView>
+                <FrameLayout
+                    android:layout_width="413dp"
+                    android:layout_height="295dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/movie_overview">
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/backdrop_guideline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.33" />
 
-            <TextView
-                android:id="@+id/movie_title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:textColor="@color/red_700"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                android:onClick="showWebsiteOnTitleClick"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/movie_poster_card"
-                app:layout_constraintTop_toBottomOf="@+id/backdrop_guideline" />
+                </FrameLayout>
 
-            <TextView
-                android:id="@+id/movie_release_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#757575"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="@+id/movie_title"
-                app:layout_constraintTop_toBottomOf="@+id/movie_title" />
 
-            <TextView
-                android:id="@+id/movie_genre"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#757575"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="@id/movie_release_date"
-                app:layout_constraintTop_toBottomOf="@id/movie_release_date" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.core.widget.NestedScrollView>
 
-            <TextView
-                android:id="@+id/movie_website"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="136dp"
-                android:layout_marginTop="24dp"
-                android:text="@string/visit"
-                android:textColor="@color/highlightColor"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="@id/movie_poster_card"
-                app:layout_constraintTop_toBottomOf="@id/movie_poster_card" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            <androidx.constraintlayout.widget.Barrier
-                android:id="@+id/movie_poster_title_barrier"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:barrierDirection="bottom"
-                app:constraint_referenced_ids="movie_release_date,movie_poster_card,movie_genre,movie_website"
-                tools:layout_editor_absoluteY="379dp" />
-
-            <TextView
-                android:id="@+id/movie_overview"
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/detailsMenu"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="16dp"
-                android:textAlignment="textStart"
-                android:textColor="?android:attr/textColor"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movie_poster_title_barrier"
-                tools:textSize="16sp" />
+                android:layout_height="wrap_content"/>
+        </FrameLayout>
 
+    </LinearLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
-
-</RelativeLayout>
-
-
+</androidx.constraintlayout.widget.ConstraintLayout>
