--- a/MovieApp/app/src/main/res/layout/item_movie.xml
+++ b/MovieApp/app/src/main/res/layout/item_movie.xml
@@ -2,18 +2,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="128dp"
     android:layout_height="172dp"
-    android:layout_marginEnd="8dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
     app:cardCornerRadius="4dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <ImageView
             android:id="@+id/movieImage"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/picture1" />
+
         <TextView
             android:id="@+id/movieTitle"
             android:layout_width="match_parent"
