--- a/MovieApp/app/src/main/res/navigation/navgraph.xml
+++ b/MovieApp/app/src/main/res/navigation/navgraph.xml
@@ -6,14 +6,14 @@
 
     <fragment
         android:id="@+id/actorsFragment"
-        android:name="com.example.movieapp.FavoriteMoviesFragment"
+        android:name="com.example.movieapp.main_fragments.FavoriteMoviesFragment"
         android:label="FavoriteMoviesFragment" />
     <fragment
         android:id="@+id/similarFragment"
-        android:name="com.example.movieapp.RecentMoviesFragment"
+        android:name="com.example.movieapp.main_fragments.RecentMoviesFragment"
         android:label="RecentMoviesFragment" />
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.example.movieapp.SearchFragment"
+        android:name="com.example.movieapp.main_fragments.SearchFragment"
         android:label="SearchFragment" />
 </navigation>
