--- a/MovieApp/app/src/main/res/navigation/navgraph.xml
+++ b/MovieApp/app/src/main/res/navigation/navgraph.xml
@@ -2,14 +2,13 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navgraph"
-    app:startDestination="@id/actorsFragment">
-
+    app:startDestination="@id/favoriteMoviesFragment">
     <fragment
-        android:id="@+id/actorsFragment"
+        android:id="@+id/favoriteMoviesFragment"
         android:name="com.example.movieapp.FavoriteMoviesFragment"
         android:label="FavoriteMoviesFragment" />
     <fragment
-        android:id="@+id/similarFragment"
+        android:id="@+id/recentMoviesFragment"
         android:name="com.example.movieapp.RecentMoviesFragment"
         android:label="RecentMoviesFragment" />
     <fragment
