--- a/MovieApp/app/src/main/res/layout/activity_movie_detail.xml
+++ b/MovieApp/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -148,10 +149,21 @@
                 <FrameLayout
                     android:layout_width="413dp"
                     android:layout_height="295dp"
+                    android:padding="30dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/movie_overview">
+
+
+                    <androidx.fragment.app.FragmentContainerView
+                        android:id="@+id/movieDetailsNavHost"
+                        android:name="androidx.navigation.fragment.NavHostFragment"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:defaultNavHost="true"
+                        app:navGraph="@navigation/movie_details_navgraph"
+                        tools:layout="@layout/fragment_actors" />
 
 
                 </FrameLayout>
