--- a/MovieApp/app/src/main/res/layout/item_movie.xml
+++ b/MovieApp/app/src/main/res/layout/item_movie.xml
@@ -1,9 +1,11 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="128dp"
-    android:layout_height="172dp"
-    android:layout_marginLeft="20dp"
+    android:layout_width="140dp"
+    android:layout_height="180dp"
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginStart="10dp"
     android:layout_marginTop="10dp"
+    android:layout_marginRight="30dp"
     android:layout_marginBottom="10dp"
     app:cardCornerRadius="4dp">
 
