--- a/MovieApp/app/src/main/res/layout/activity_main.xml
+++ b/MovieApp/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,8 @@
         android:layout_height="0dp"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/navgraph"
         tools:layout="@layout/fragment_favorite_movies" />
